objects/zqu__QuoteWizardStep__c.object
<CustomObject>
    <description>Object to hold metadata on Quote Wizard</description>
    <fields>
        <fullName>zqu__BackButtonText__c</fullName>
        <label>Back Button Text</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__NextButtonText__c</fullName>
        <label>Next Button Text</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__PageName__c</fullName>
        <label>Visual Force Page</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProgressBarText__c</fullName>
        <label>Progress Bar Text</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__StepNumber__c</fullName>
        <label>Step #</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__SubscriptionType__c</fullName>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Subscription</fullName>
                </value>
                <value>
                    <fullName>Amend Subscription</fullName>
                </value>
                <value>
                    <fullName>Renew Subscription</fullName>
                </value>
                <value>
                    <fullName>Cancel Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quote Wizard Step</label>
    <nameField>
        <label>Quote Wizard Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Wizard Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>